k8s/service.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50051
  type: NodePort
